# PAC-MAN-Student-mechatro-edition

./: Gracz.h  README.md
PACMANMCHTR_FINAL/: Aktualizowanie.h  CMakeLists.txt  Gra.cpp  Gra.h  Gracz.h  Okno_gry.h  elementy_gry.h  mapa.cpp  wrog.h
PAC_MAN_MECHATRO/: CMakeLists.txt  Gracz.h  Okno_Gry.cpp  Okno_gry.h  Przedmiot.cpp  Przedmiot.h  elementy_gry.h  mapa.cpp
PAC_MAN_MECHATRO/PAC_MAN_MECHATRO/: Gra.cpp  Gra.h  Mapa.h  elementy_gry.cpp  wrog.h
html/: _gra_8h_source.html  _gracz_8h_source.html  _mapa_8h_source.html  _o_k_n_o___g_r_y_8h_source.html  _przedmiot_8h_source.html  annotated.html  annotated_dup.js  class_elementy_gry-members.html  class_elementy_gry.html  class_gra-members.html  class_gra.html  class_gracz-members.html  class_gracz.html  class_mapa-members.html  class_mapa.html  class_okno_gry-members.html  class_okno_gry.html  class_przedmiot-members.html  class_przedmiot.html  class_wrog-members.html  class_wrog.html  classes.html  doxygen_crawl.html  elementy__gry_8h_source.html  files.html  files_dup.js  hierarchy.html  hierarchy.js  navtreedata.js  navtreeindex0.js  wrog_8h_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  classes_4.js  searchdata.js
latex/: _gra_8h_source.tex  _gracz_8h_source.tex  _mapa_8h_source.tex  _o_k_n_o___g_r_y_8h_source.tex  _przedmiot_8h_source.tex  annotated.tex  class_elementy_gry.eps  class_elementy_gry.tex  class_gra.tex  class_gracz.eps  class_gracz.tex  class_mapa.tex  class_okno_gry.eps  class_okno_gry.tex  class_przedmiot.eps  class_przedmiot.tex  class_wrog.eps  class_wrog.tex  elementy__gry_8h_source.tex  files.tex  hierarchy.tex  refman.tex  wrog_8h_source.tex
mchtrpacman/: Gracz.h  Mapa.h  Okno_Gry.cpp  Rysowanie.h  elementy_gry.cpp  main.cpp  wrog.h
mchtrpacman/mchtrpacman/: Aktualizowanie.h  CMakeLists.txt  Gra.cpp  Gra.h  Gracz.cpp  Okno_gry.h  Przedmiot.cpp  Przedmiot.h  elementy_gry.h  poziom_1.txt  wrog.cpp
(+9 files in other folders)
